--- a/srcs/requirements/nginx/cv/index.html
+++ b/srcs/requirements/nginx/cv/index.html
@@ -66,17 +66,13 @@
             <div class="education-item">
                 <div class="education-header">
                     <h3>Professional Certificate in Web Programming</h3>
-                    <span class="date">2024</span>
                 </div>
-                <p class="institution">42 Madrid</p>
             </div>
 
             <div class="education-item">
                 <div class="education-header">
                     <h3>Professional Certificate in Systems Programming</h3>
-                    <span class="date">2024</span>
                 </div>
-                <p class="institution">42 Madrid</p>
             </div>
 
             <div class="education-item">
@@ -147,7 +143,7 @@
 
         <!-- Core Competencies -->
         <section class="section">
-            <h2 class="section-title">CORE COMPETENCIES</h2>
+            <h2 class="section-title">CORE COMPETENCES</h2>
             <div class="competencies">
                 <span class="competency-badge">Problem-Solving</span>
                 <span class="competency-badge">Autonomous Learning</span>
